Opened 10 years ago

Closed 10 years ago

#11552 closed bug (fixed)

libroot: Fix Coverity bug 603224: Missing break in switch

Reported by: cdesai Owned by: axeld
Priority: normal Milestone: R1
Component: System/libroot.so Version: R1/Development
Keywords: gci2014 Cc:
Blocked By: Blocking:
Platform: All

Description

This fixes a bug reported by Coverity

Attachments (1)

0002-libroot-Fix-Coverity-bug-603224-Missing-break-in-swi.patch (776 bytes ) - added by cdesai 10 years ago.

Download all attachments as: .zip

Change History (8)

comment:1 by cdesai, 10 years ago

patch: 01

comment:2 by cdesai, 10 years ago

Keywords: gci2014 added

comment:3 by umccullough, 10 years ago

Component: - GeneralSystem/libroot.so
Owner: changed from nobody to axeld

comment:4 by bonefish, 10 years ago

At a first glance I'd say the missing break is intentional.

comment:5 by umccullough, 10 years ago

Ah, because both minutes and seconds have an upper value of 60?

In that case, I guess adding a simple comment indicating that the fallthrough is intentional would be prudent.

in reply to:  5 comment:6 by umccullough, 10 years ago

Replying to umccullough:

Ah, because both minutes and seconds have an upper value of 60?

Max value of 59 - I'm not awake yet...

comment:7 by pulkomandy, 10 years ago

Resolution: fixed
Status: newclosed

Applied a more correct patch for this in hrev48525.

Note: See TracTickets for help on using tickets.