src/system/libroot/os/parsedate.cpp
@@ -1014,11 +1014,16 @@ parsedate_etc(const char* dateString, time_t now, int* _flags)
 							dateMask.Set(TYPE_HOUR);
 							break;
 						case 'M':
+							if (element->value > 59)
+								goto next_format;
+
 							dateMask.Set(TYPE_MINUTE);
+							break;
 						case 'S':
 							if (element->value > 59)
 								goto next_format;
 
+							dateMask.Set(TYPE_SECOND);
 							break;
 						case 'y':
 						case 'Y':
